fix navbar on mobile

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -30,6 +30,12 @@
   align-content: center;
 }
 
+@media only screen and (max-width: 600px) {
+  .navbar-nav-elements {
+    justify-content: center;
+  }
+}
+
 .navbar-title {
   flex-grow: 1;
   font-family: 'Lato', sans-serif;
